bugfix: sidebar list aligned to left

--- a/packages/bot-web-ui/src/components/dashboard/tutorial-tab/sidebar.scss
+++ b/packages/bot-web-ui/src/components/dashboard/tutorial-tab/sidebar.scss
@@ -71,6 +71,11 @@
                             margin-top: 7.5rem;
                         }
                     }
+                    &--tutorials {
+                        display: flex;
+                        justify-content: flex-start;
+                        padding: 0 1.6rem;
+                    }
                 }
 
                 &__active {
